welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value N
    return Math.abs(2*(N-21))
                       ^diff21:4: error: not found: value N
  } else return (Math.abs(N-21))
                          ^