welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
  if (n> 21) {
    return Math.abs(2*(N-21))
  } else return (Math.abs(N-21))
}